--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -15,11 +15,17 @@ html {
  */
 
 body {
+  font-family:"Source Sans Pro";
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
 }
-
+main {
+  width: 90%;
+  background-color: #f4f1ec;
+  margin-left: auto;
+  margin-right: auto;
+}
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
