--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,4 +1,4 @@
-header {
+.profile {
   height: 400px;
   display:flex;
   justify-content: center;
@@ -6,6 +6,7 @@ header {
   align-items: center;
   background-color: blanchedalmond;
   background-image: url("https://www.transparenttextures.com/patterns/diagmonds.png");
+  margin-top: 120px;
 }
 
 h2{
