--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -12,6 +12,7 @@ button {
   background-color: burlywood ;
   border-radius: 5px;
   border-style: hidden;
+  font-family: "Bungee";
 }
 textarea {
   margin-right: auto;
