--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -20,6 +20,7 @@ article{
   margin-top: 15px;
   margin-bottom: 15px;
   padding: 2%;
+  word-wrap: break-word;
 }
 h6.handle{
   visibility: hidden;
