--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -12,3 +12,13 @@
 h2{
   color: darkorchid;
 }
+@media only screen and (min-width: 1024px) {
+  .profile{
+    margin-top:20%;
+    margin-left:5%;
+    margin-right:5%;
+    margin-bottom:5%;
+    width: 40%;
+    height: 40%;
+  }
+}
