--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -27,6 +27,26 @@ main {
   margin-right: auto;
 }
 
+@media only screen and (min-width: 1024px) {
+  body{
+    display:flex;
+    flex-direction: row;
+  }
+  main.container{
+    margin-top: 15%;
+    margin-right:5%;
+  }
+ 
+}
+@media only screen and (max-width: 768px) {
+  body{
+    display:flex;
+    justify-content: space-around;
+    flex-direction: column;
+  }
+ 
+ 
+}
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
